new website up and running

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,4 @@
-$brand-color: #abf0a8;
+$brand-color: #085e28;
 $secondary-brand-color: #41e47d;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
