--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 	{% seo %}
 	{% feed_meta %}
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
@@ -23,7 +23,7 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/krish-logo.jpg" alt="Krish Logo" width="100" height="120" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo.svg" alt="Gokulamn Logo" width="100" height="50" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -44,7 +44,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} MyApp Ltd. • <a href="#">Terms</a> &amp; <a href="#">Privacy</a> • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Biotech division of Gokulam Entreprise. • <a href="/terms/">Terms and conditions</a> ; • <a href="https://cloudcannon.com/">Template by CloudCannon</a></p>
 			</div>
 		</footer>
 		<script>
