--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,17 +10,21 @@
 		{% if link.link == page.url %}
 			{% assign class = class | append: " active" %}
 		{% endif %}
+
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}"
 		{% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}</a>
 		<!-- {% if link.subfolder[0] %}
 		<div class="dropdown">
-			<button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  		<div id="myDropdown" class="dropdown-content">
-      <ul>
-        {% for entry in link.subfolder %}
-          <li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
-        {% endfor %}
-      </ul>
+    <button class="dropbtn" onclick="myFunction()">Dropdown
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content" id="myDropdown">
+      		<ul>
+        	{% for entry in link.subfolder %}
+          	<li><a href="{{ entry.url }}">{{ entry.page }}</a></li>
+        	{% endfor %}
+      		</ul>
+			</div>
 			</div>
 		{% endif %} -->
 	{% endfor %}
