--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+	<!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<!-- <script type="text/javascript" src="{{ site.baseurl }}/js/custom.js"></script> -->
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 	{% seo %}
 	{% feed_meta %}
