--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	<!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css"> -->
 	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
 	<!-- <script type="text/javascript" src="{{ site.baseurl }}/js/custom.js"></script> -->
+	<script type="text/javascript" src="{{ site.baseurl }}/js/gtaj.js"></script>
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 	{% seo %}
 	{% feed_meta %}
