--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -1,11 +1,11 @@
-.staff {
+.products {
 	padding: 0;
 	list-style: none;
 	@extend %flexbox;
 	@include flex-flow(wrap);
 	text-align: center;
 	li {
-		padding: 30px 20px;
+		padding: 70px 100px;
 		box-sizing: border-box;
 		width: 100%;
 
@@ -14,7 +14,7 @@
 		}
 
 		@media #{$desktop} {
-			@include flex(1, 1, 29%);
+			@include flex(1, 1, 15%);
 		}
 
 	}
@@ -31,7 +31,7 @@
 		width: 100px;
 		height: 100px;
 			img {
-				border-radius: 200px;
+				border-radius: 10px;
 			}
 		}
 
