cleaned up website

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,5 @@
 $brand-color: #085e28;
+$highlight-color: #99FF99;
 $secondary-brand-color: #41e47d;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
