--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,10 @@
 <!doctype html>
-
+<!-- Thank you for taking a look. Probably you need a job and develop a better webpage for us! contact us -->
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-	<!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/custom.css"> -->
-	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-	<!-- <script type="text/javascript" src="{{ site.baseurl }}/js/custom.js"></script> -->
 	<script type="text/javascript" src="{{ site.baseurl }}/js/gtaj.js"></script>
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 	{% seo %}
@@ -18,7 +15,6 @@
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		})(window,document,"script","//www.google-analytics.com/analytics.js","ga");
-
 			ga("create", "{{ site.google_analytics_key }}", "auto");
 			ga("send", "pageview");
 		</script>
@@ -27,14 +23,13 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo.svg" alt="Gokulamn Logo" width="100" height="50" /></a></div>
+				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web1.svg" alt="Gokulamn Logo" width="80" height="30" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
 		{{ content }}
 		<footer>
 			<div class="container">
-				<p class="editor-link"><a href="cloudcannon:collections/_data/footer.yml" class="btn"><strong>&#9998;</strong> Edit footer</a></p>
 				<div class="footer-columns">
 					{% for column in site.data.footer %}
 					<ul class="footer-links">
