--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -1,5 +1,8 @@
 .nav-open nav {
 	border-bottom: 1px dotted rgba(255, 255, 255, .2);
+	position:fixed;
+	top: 0;
+	width: 100%;
 	padding: 10px 0;
 	a {
 		display: block;
@@ -17,7 +20,7 @@
 
 nav {
 	text-transform: uppercase;
-	font-size: .8em;
+	font-size: .9em;
 	width: 100%;
 
 	@media #{$mid-point} {
@@ -32,7 +35,7 @@ nav {
 	a {
 		margin: 0 3px;
 		padding: 20px 10px;
-		border-bottom: 1px solid rgba(255,255,255,0);
+		border-bottom: 2px solid rgba(255,255,255,0);
 		color: rgba(255,255,255,.8);
 		transition: .2s ease-in-out;
 		display: none;
@@ -62,8 +65,7 @@ nav {
 	}
 
 	a:hover {
-
-		border-bottom: 1px solid rgba(255,255,255,.3);
+		border-bottom: 2px solid rgba(255,255,255,.3);
 		color: #fff;
 	}
 
