--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -19,6 +19,14 @@
 
 	}
 
+	.big-image {
+		width: 300px;
+		height: 300px;
+			img {
+				border-radius: 100px;
+			}
+		}
+
 	.square-image {
 		width: 200px;
 		height: 200px;
