change github.io to com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
 	<body>
 		<header>
 			<div class="container">
-				<div class="company-name"><a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web1.svg" alt="Gokulamn Logo" width="80" height="30" /></a></div>
+				<div class="company-name">
+					<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web1.svg" alt="Gokulamn Logo" width="80" height="30" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
