--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-	<script type="text/javascript" src="{{ site.baseurl }}/js/gtaj.js"></script>
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 	{% seo %}
 	{% feed_meta %}
@@ -24,7 +23,7 @@
 		<header>
 			<div class="container">
 				<div class="company-name">
-					<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web1.svg" alt="Gokulamn Logo" width="80" height="30" /></a></div>
+					<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web.jpg" alt="Gokulamn Logo" width="80" height="30" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
