--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,5 +5,6 @@ $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
+$mobile: "(min-width: 300px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
