moved script to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,30 @@
 			ga("send", "pageview");
 		</script>
 	{% endif %}
-	
+	<meta name="msvalidate.01" content="1BAC5E7A43C91E8FEDC06983E44F732B" />
+	<script type="application/ld+json">
+	{ "@context": "http://schema.org",
+	 "@type": "organization",
+	 "url": "https://www.gokulambiotech.com",
+	 "name": "Gokulam Biotech",
+	 "logo": "https://www.gokulambiotech.com/images/Gokulamlogo.png",
+	 "sameAs": [
+	    "https://www.facebook.com/gokulambiotec",
+	    "https://twitter.com/GokulamBioTech"
+	  ],
+	 "contactPoint": [{
+	    "@type": "ContactPoint",
+	    "telephone": "+91-413-2611455",
+	    "contactType": "Customer service",
+	    "areaServed": "IN"
+	  },{
+	    "@type": "ContactPoint",
+	    "telephone": "+91-94431-49095",
+	    "contactType": "sales",
+	    "areaServed": "IN"
+	  }]}
+	}
+	</script>
 </head>
 	<body>
 		<header>
