--- a/_sass/staff.scss
+++ b/_sass/staff.scss
@@ -35,6 +35,14 @@
 			}
 		}
 
+	.medium-image {
+		width: 150px;
+		height: 200px;
+			img {
+				border-radius: 10px;
+			}
+		}
+
 	.small-image {
 		width: 100px;
 		height: 100px;
