--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 		<header>
 			<div class="container">
 				<div class="company-name">
-					<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web.jpg" alt="Gokulamn Logo" width="50" height="23" /></a></div>
+					<a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/Gokulamlogo-web.png" alt="Gokulamn Logo" width="50" height="23" /></a></div>
 				{% include navigation.html %}
 			</div>
 		</header>
@@ -67,7 +67,7 @@
 					</ul>
 					{% endfor %}
 				</div>
-				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Biotech division of Gokulam Entreprise. • <a href="/terms/">Terms and conditions</a> ; • <a href="https://help.github.com/articles/using-jekyll-as-a-static-site-generator-with-github-pages/" target="_blank">Powered by Github/Jekyll</a></p>
+				<p class="copyright">&copy; {{ site.time | date: '%Y' }} Biotech division of Gokulam Entreprise. • <a href="/terms/">Terms and conditions</a> ; • <a href="https://help.github.com/articles/using-jekyll-as-a-static-site-generator-with-github-pages/" target="_blank">Powered by Github/Jekyll</a> • <a href="https://www.cloudflare.com/" target="_blank"> Cloudflare </a></p>
 			</div>
 		</footer>
 		<script>
