--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: page
 
 				(function() {  // DON'T EDIT BELOW THIS LINE
 					var d = document, s = d.createElement('script');
-					s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+					s.src = 'https://gokulambiotech.disqus.com/embed.js';
 					s.setAttribute('data-timestamp', +new Date());
 					(d.head || d.body).appendChild(s);
 				})();
@@ -43,3 +43,4 @@ layout: page
 		{% endif %}
 	</div>
 </div>
+<script id="dsq-count-scr" src="//gokulambiotech.disqus.com/count.js" async></script>
