--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -5,47 +5,44 @@
 	@include flex-flow(wrap);
 	text-align: center;
 	li {
-		padding: 70px 100px;
-		box-sizing: border-box;
+		padding: 30px 30px;
+		box-sizing: 2px border-box;
 		width: 100%;
 
 		@media #{$tablet} {
-			@include flex(1, 1, 45%);
+			@include flex(1, 1, 5%);
 		}
 
 		@media #{$desktop} {
-			@include flex(1, 1, 15%);
+			@include flex(1, 1, 2%);
 		}
 
 	}
 
-	.medium-image {
-		width: 150px;
-		height: 200px;
+	.product-image {
+		width: 120px;
+		height: 100px;
+		font-size: 1.2em;
+		margin-top: 5px;
 			img {
-				border-radius: 10px;
+				width: 100px;
+				height: 100px;
+				border-radius: 1px;
 			}
-		}
-		
-	.square-image {
-		width: 200px;
-		height: 200px;
-			img {
-				border-radius: 200px;
-			}
+
 		}
 
 	.small-image {
 		width: 100px;
 		height: 100px;
 			img {
-				border-radius: 10px;
+				border-radius: 1px;
 			}
 		}
 
 	.pname {
 			font-size: 1.5em;
-			margin-top: 30px;
+			margin-top: 5px;
 		}
 
 
