--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 			ga("send", "pageview");
 		</script>
 	{% endif %}
+	<meta name="yandex-verification" content="1d9c67067c26abf9" />
 	<meta name="msvalidate.01" content="1BAC5E7A43C91E8FEDC06983E44F732B" />
 	<script type="application/ld+json">
 	{ "@context": "http://schema.org",
@@ -34,7 +35,7 @@
 	 "name": "Gokulam Biotech",
 	 "logo": "https://www.gokulambiotech.com/images/Gokulamlogo.png",
 	 "sameAs": [
-	    "https://www.facebook.com/gokulambiotec",
+	    "https://www.facebook.com/gokulambiotecpondy",
 	    "https://twitter.com/GokulamBioTech"
 	  ],
 	 "contactPoint": [{
