--- a/_sass/pricing.scss
+++ b/_sass/pricing.scss
@@ -48,6 +48,63 @@
 	}
 }
 
+
+.productplans {
+	width: auto;
+	@extend %flexbox;
+	@include flex-flow(wrap);
+	padding: 50px 0 30px 0;
+	list-style: none;
+
+	.plan {
+		list-style: none;
+		padding: 0;
+		margin: 0 10px 50px 10px;
+		text-align: center;
+		border: 1px solid #eee;
+		border-radius: 5px;
+		box-shadow: 0px 0px 10px #eee;
+		width: auto;
+
+		.highlighted {
+			font-size: $name
+		}
+
+		.pricing-cta {
+			padding: 0;
+
+			a {
+				display: block;
+				box-sizing: border-box;
+				padding: 20px 0;
+				border-radius: 0 0 2px 2px;
+				border: 0;
+			}
+		}
+
+		@media #{$tablet} {
+			@include flex(1, 1, 45%);
+		}
+
+		@media #{$desktop} {
+			@include flex(1, 1, 25%);
+		}
+
+		li {
+			border-top-right-radius: 5px;
+			border-top-left-radius: 5px;
+			padding: 10px 0;
+			h3 {
+				padding: 0;
+				margin: 0;
+				color: #fff;
+				font-weight: normal;
+			}
+		}
+	}
+
+}
+
 .faq {
 	@media #{$desktop} {
 		@include columns(2);
