--- a/_sass/pricing.scss
+++ b/_sass/pricing.scss
@@ -55,7 +55,7 @@
 	@include flex-flow(wrap);
 	padding: 50px 0 30px 0;
 	list-style: none;
-
+	align-self: auto;
 	.plan {
 		list-style: none;
 		padding: 0;
