--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: page
 			{% assign author_id = page.author_people | prepend: "/people/" | append: "/" %}
 			{% assign author = site.people | where: "url", author_id | first %}
 			<p>Author: <a href="{% include relative-src.html src=author_id %}" target="{{ author.name }}">
-				{{ author.name }}</a></a></p>
+				{{ author.name }}</a></p>
 		</div>
 
 		<div class="blog-navigation">
@@ -25,22 +25,21 @@ layout: page
 		</div>
 
 		{% if site.disqus_shortname and page.comments %}
-			<div id="disqus_thread"></div>
-			<script>
-				var disqus_shortname = '{{ site.disqus_shortname }}';
-				var disqus_config = function () {
-					this.page.url = "{{ page.url | prepend: site.url }}";
-					this.page.identifier = "{{ page.id }}";
+		<div id="disqus_thread"></div>
+		<script>
+			var disqus_shortname = '{{ site.disqus_shortname }}';
+			var disqus_config = function () {
+				this.page.url = "{{ page.url | prepend: site.url }}";
+				this.page.identifier = "{{ page.id }}";
 				};
-
-				(function() {  // DON'T EDIT BELOW THIS LINE
-					var d = document, s = d.createElement('script');
-					s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-					s.setAttribute('data-timestamp', +new Date());
-					(d.head || d.body).appendChild(s);
-				})();
+			(function() { // DON'T EDIT BELOW THIS LINE
+			var d = document, s = d.createElement('script');
+			s.src = 'https://gokulambiotech.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+			})();
 			</script>
-			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		{% endif %}
 	</div>
 </div>
