--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -9,10 +9,10 @@
 
 .blog-post {
 	.author {
-		padding: 30px 0 0 0;
-		border: 1px solid #eee;
+		padding: 10px 0 0 0;
+		//border: 1px solid #eee;
 		margin: 30px 0;
-		font-size: $name;
+		font-size: 17px;
 
 		.square-image {
 			width: 125px;
