--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,6 @@ layout: page
 ---
 <div class="blog-post text-container">
 	{% include post-title.html post=page %}
-
-	<p class="editor-link"><a href="cloudcannon:collections/{{ page.path }}" class="btn"><strong>&#9998;</strong> Edit Post</a></p>
 	<div class="post-content">
 		{{ content }}
 
@@ -23,6 +21,8 @@ layout: page
 				<a class="next" href="{% include relative-src.html src=page.next.url %}">{{ page.next.title }} &raquo;</a>
 			{% endif %}
 		</div>
+
+		{% include share-bar.html %}
 
 		{% if site.disqus_shortname and page.comments %}
 		<div id="disqus_thread"></div>
