security, blog, management updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<!-- Thank you for taking a look. Probably you need a job and develop a better webpage for us! contact us -->
+<!-- Thank you for taking a look. Probably you need to check http://jekyllrb.com or contact us -->
 <html lang="en">
 <head>
 	<meta charset="utf-8">
