updated cookie policies in terms and conditions and updated discuss loading

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,7 +83,7 @@
 		"type": "opt-in",
 		"revokable":"true",
 		"content": {
-			"message": "We respect your privacy - You can opt out of using cookies. This website uses google analytics cookies to offer best services for our customers.",
+			"message": "We respect your privacy - You can opt out of using cookies. This website uses google analytics and discus (chat platform) cookies to offer best services for our customers.",
 			"dismiss": "Got it!",
 			"allow": "Allow Cookies",
 			"href": "https://www.gokulambiotech.com/terms"
