working version of the product

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 
 	{% if site.snipcart_key %}
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="{{ site.snipcart_key }}"></script>
 	<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet">
 	{% endif %}
