--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,21 +20,18 @@ layout: default
 <div class="content">
 	<section class="page">
 		<div class="container">
+			<h2>Add this product to your shopping cart</h2>
 			<div class="product-container">
 				{% include product-styles.html product=page %}
 				<div class="product-details" id="add">
 					<h3>{{ page.name }}</h3>
 					{{ page.description_markdown | markdownify }}
 
-					<h4>₹{{ page.price }}</h4>
+					<h4> {{page.sizes}} = ₹{{ page.price }}</h4> <p>*Includes normal shipping cost.</p>
 					<div class="button">{% include snipcart-button.html product=page %}</div>
 				</div>
 			</div>
 		</div>
 	</section>
 </div>
-
-<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="{{ site.api_key }}" id="snipcart"></script>
-<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
-
 {% endif %}
