updated snipcart button and navigation with items and total cost

--- a/_includes/snipcart-button.html
+++ b/_includes/snipcart-button.html
@@ -8,7 +8,11 @@
 	data-item-id="{{ include.product.sku }}"
 	data-item-image="{{ include.product.styles.first.image }}"
 	data-item-description="{{ include.product.description }}"
+	data-item-weight="{{ include.product.weight }}"
+	data-item-stackable="auto"
+	data-item-max-quantity="{{ include.product.max }}"
 	data-item-custom1-name="Size"
+	data-item-custom1-type="readonly"
 	data-item-custom1-options="{{ include.product.sizes | join: '|' }}"
 	data-item-url="{{ include.product.url }}"
 	data-item-price="{{ include.product.price }}">
