--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
 	{% if site.snipcart_key %}
 	<!-- Snipcart v3.0 migration-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script>
 		window.SnipcartSettings = {
 		  publicApiKey: "{{ site.snipcart_key }}",
