--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,5 +11,6 @@
 		{% endif %}
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}</a>
 	{% endfor %}
-	<a href="#" class="cart snipcart-checkout"><i class="material-icons">shopping_cart</i></a>
+	<a href="#" class="cart snipcart-checkout"><i class="material-icons">shopping_cart</i>(<span class="snipcart-items-count"></span>)=<span class="snipcart-total-price"></span></a>
+	
 </nav>
