--- a/_includes/snipcart-button.html
+++ b/_includes/snipcart-button.html
@@ -1,20 +1,11 @@
-{% assign colors = "" %}
-{% for style in include.product.styles %}
-	{% assign colors = colors | append: '|' | append: style.name %}
-{% endfor %}
-{% assign colors = colors | remove_first: '|' %}
 <button class="snipcart-add-item"
-	data-item-name="{{ include.product.name }}"
-	data-item-id="{{ include.product.sku }}"
+	data-item-name="{{ include.size.sku }}"
+	data-item-id="{{ include.size.sku }}"
 	data-item-image="{{ include.product.styles.first.image }}"
 	data-item-description="{{ include.product.description }}"
-	data-item-weight="{{ include.product.weight }}"
-	data-item-stackable="auto"
-	data-item-max-quantity="{{ include.product.max }}"
-	data-item-custom1-name="Size"
-	data-item-custom1-type="readonly"
-	data-item-custom1-options="{{ include.product.sizes | join: '|' }}"
 	data-item-url="{{ include.product.url }}"
-	data-item-price="{{ include.product.price }}">
-	{% if include.text %}{{ include.text }}{% else %}Add to cart{% endif %}
+	data-item-price="{{include.size.price }}"
+	data-item-weight="{{include.size.weight}}"
+	>
+	Add to cart
 </button>
