--- a/_includes/product-styles.html
+++ b/_includes/product-styles.html
@@ -13,3 +13,5 @@
 		{% endfor %}
 	</div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/js/application.js" type="text/javascript"></script>
