fixed design issues on the stopping page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/icon.png">
 
 	{% if site.snipcart_key %}
@@ -104,7 +105,7 @@
 		"type": "opt-in",
 		"revokable":"true",
 		"content": {
-			"message": "We respect your privacy - You can opt out of using cookies. This website uses google analytics and discus (chat platform) cookies to offer best services for our customers.",
+			"message": "We respect your privacy - You can opt out of using cookies. This website uses Google analytics, Snipcart (online shopping service) and Discus (chat platform) cookies to offer best services for our customers.",
 			"dismiss": "Got it!",
 			"allow": "Allow Cookies",
 			"href": "https://www.gokulambiotech.com/terms"
