--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,24 +14,28 @@ layout: default
 			{% endif %}
 			{{ content }}
 		</div>
-	</section>
-</div>
-{% if page.shop %}
-<div class="content">
-	<section class="page">
-		<div class="container">
-			<h2>Buy this product via our Online Shop</h2>
-			<div class="product-container">
+	
+	{% if page.shop %}
+	<div class="box">
+		<div class="row">
+			<div class="col-xs-1">
+				<!-- empty to center content -->
+			</div>
+			<div class="col-xs-3">
 				{% include product-styles.html product=page %}
-				<div class="product-details" id="add">
-					<h3>{{ page.name }}</h3>
-					{{ page.description_markdown | markdownify }}
-					{% for size in page.sizes %}
-						<h4> {{size.type}} = ₹{{ size.price }} - {% include snipcart-button.html product=page size=size %}</h4>
-					{% endfor %}
-				</div>
+			</div>
+			<div class="col-xs">
+				<h3><a href="{{ page.url }}">{{ page.name }}</a></h3>
+				Note: Click the link above for detailed information on the product.
+				{% for size in page.sizes %}
+				{% include snipcart-button.html product=page size=size %}
+				{% endfor %}
+			</div>
+			<div class="col-xs-1">
+				<!-- empty to center content -->
 			</div>
 		</div>
-	</section>
+	</div>
+	{% endif %}
+</section>
 </div>
-{% endif %}
