--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -103,16 +103,6 @@
 		margin-left: 40px;
 	}
 
-	.product-details {
-		flex: 2 1 500px;
-		text-align: left;
-		margin-left: 40px;
-
-		h4 {
-			color: $brand-color;
-		}
-	}
-
 	form {
 		border: 1px solid #444;
 		padding: 20px;
@@ -156,23 +146,26 @@
 		font-size: 1.1rem;
 	}
 
-	.snipcart-add-item {
-		-webkit-appearance: none;
-		color: #222;
-		text-decoration: none;
-		border: 0;
-		background: none;
-		font-weight: bold;
-		font-size: 1.2em;
-		padding: 10px 15px 15px;
-		float: right;
-		cursor: pointer;
-		line-height: 1;
-		margin-top: 10px;
+}
 
-		&:hover {
-			background: #f5f5f5;
-			color: #000;
-		}
+.snipcart-add-item {
+	-webkit-appearance: button;
+	color: #fff;
+	text-decoration: none;
+	background: $brand-color;
+	// border-radius: 1px;
+	// border: 1px solid rgba(255, 255, 255, 0.3);
+	// padding: 16px 50px;
+	// font-weight: bold;
+	// font-size: 1.2em;
+	// padding: 10px 15px 15px;
+	// float: right;
+	cursor: pointer;
+	line-height: 1;
+	margin-top: 10px;
+
+	&:hover {
+		background: $highlight-color;
+		color: #fff;
 	}
 }
