--- a/_includes/snipcart-button.html
+++ b/_includes/snipcart-button.html
@@ -4,18 +4,13 @@
 			<h4> {{size.type}} = ₹{{ size.price }} </h4>
 		</div>
 		<div class="col-xs">
-			<div class="row">
-				<div class="col-xs">
-					<label for="{{ include.size.sku }}-qty">Quantity:</label> 
-				</div>
-				<div class="col-xs">
-					<input class="input" type="number" id="{{ include.size.sku }}-qty" class="qty" min="1" value="1" price="{{include.size.price }}"/>
-				</div>
-			</div>
-			
-		</div>	
+			<label for="{{ include.size.sku }}-qty">Quantity:</label> 
+		</div>
 		<div class="col-xs">
-			<button class="snipcart-add-item  buy-button"
+			<input class="input" type="number" id="{{ include.size.sku }}-qty" class="qty" min="1" value="1" price="{{include.size.price }}"/>
+		<!-- </div>
+		<div class="col-xs"> -->
+			<button class="snipcart-add-item buy-button"
 			data-item-name="{{ include.size.sku }}"
 			data-item-quantity="1"
 			data-item-id="{{ include.size.sku }}"
@@ -27,8 +22,8 @@
 			>
 			Add to cart (Total: INR {{ include.size.price }})
 			</button>
-		</div>
+		</div>	
 	</div>
-  
+	<br>
 </div>
 
