--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,5 +12,8 @@
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}</a>
 	{% endfor %}
 	<a href="#" class="cart snipcart-checkout"><i class="material-icons">shopping_cart</i>(<span class="snipcart-items-count"></span> items)=<span class="snipcart-total-price"></span></a>
-	
+	<form action="/search" method="get">
+		<input type="text" id="search-box" name="query" placeholder="Search..">
+	</form>
+
 </nav>
