--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -5,6 +5,16 @@
 		display: block;
 	}
 
+	form {
+		display: block;
+	}
+
+	input {
+		display: block;
+	}
+
+
+
 	@media #{$mid-point} {
 		border: 0;
 		padding: 0 20px;
@@ -12,6 +22,15 @@
 		a {
 			display: inline;
 		}
+
+		form {
+			display: block;
+		}
+	
+		input {
+			display: block;
+		}
+		
 	}
 }
 
@@ -82,4 +101,108 @@ nav {
 		color: #fff;
 	}
 
+	form {
+		margin: 0 3px;
+		padding: 20px 10px;
+		// border: 1px solid #000;
+		transition: .2s ease-in-out;
+		display: none;
+		
+
+		@media #{$mid-point} {
+			display: inline;
+			padding: 10px;
+			width: 10%;
+			height: 9%;
+		}
+		
+		&.nav-toggle {
+			display: inline;
+			position: absolute;
+			right: 10px;
+			top: -22px;
+			font-size: 1.9em;
+			border: 0;
+			width: 80%;
+			height: 5%;
+
+			@media #{$mid-point} {
+				display: none;
+			}
+
+			&:hover {
+				border: 0;
+			}
+		}
+
+		// @media #{$tablet} {
+		// 	display: inline;
+		// 	padding: 10px;
+		// 	width: 10%;
+		// 	height: 9%;
+		// }
+		
+
+		// @media #{$mobile} {
+		// 	display: inline;
+		// 	padding: 10px;
+		// 	width: 10%;
+		// 	height: 9%;
+		// }
+
+	}
+	
+	input {
+		margin: 0 3px;
+		padding: 20px 10px;
+		border: 1px solid #000;
+		border-bottom: 2px solid rgba(255,255,255,0);
+		transition: .2s ease-in-out;
+		display: none;
+		
+
+		@media #{$mid-point} {
+			display: inline;
+			padding: 10px;
+			width: 9%;
+			height: 8%;
+		}
+
+		&.nav-toggle {
+			display: inline;
+			position: absolute;
+			right: 10px;
+			top: -22px;
+			font-size: 1.9em;
+			border: 0;
+			width: 70%;
+			height: 4%;
+
+			@media #{$mid-point} {
+				display: none;
+			}
+
+			&:hover {
+				border: 0;
+			}
+		}
+
+		// @media #{$tablet} {
+		// 	display: inline;
+		// 	padding: 10px;
+		// 	width: 10%;
+		// 	height: 9%;
+		// }
+		
+
+		// @media #{$mobile} {
+		// 	display: inline;
+		// 	padding: 10px;
+		// 	width: 10%;
+		// 	height: 9%;
+		// }
+	}
+
+		
+	
 }
