--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,6 +118,17 @@
 		});		
 	</script>
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X34XSZRSFG"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-X34XSZRSFG');
+	</script>
+
 	<script>
 		if (document.cookie.split(';').some((item) => item.trim().startsWith('cookie_consent-gokulambiotech.com=allow'))) {
 			// Set Google Analytics Cookies if consent is allowed
