--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -118,8 +118,7 @@
 		});		
 	</script>
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
-
-	<!-- Google tag (gtag.js) -->
+	<!-- Google tag (gtag.js)
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-X34XSZRSFG"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
@@ -128,7 +127,7 @@
 
 		gtag('config', 'G-X34XSZRSFG');
 	</script>
-
+	 -->
 	<script>
 		if (document.cookie.split(';').some((item) => item.trim().startsWith('cookie_consent-gokulambiotech.com=allow'))) {
 			// Set Google Analytics Cookies if consent is allowed
