price update for vam

--- a/_includes/snipcart-button.html
+++ b/_includes/snipcart-button.html
@@ -19,6 +19,8 @@
 			data-item-url="{{ include.product.url }}"
 			data-item-price="{{include.size.price }}"
 			data-item-weight="{{include.size.weight}}"
+			data-item-taxes="{{include.size.tax}}"
+			data-item-has-taxes-included="false"
 			>
 			Add to cart (Total: INR {{ include.size.price }})
 			</button>
